# ros2-lidar-object-detection

./: .gitignore  LICENSE  README.md
launch/: main.launch.py
src/lidar_object_detection/: package.xml  setup.py
src/lidar_object_detection/lidar_object_detection/: lidar_object_detector_node.py  lidar_publisher_node.py
src/lidar_object_detection/lidar_object_detection/model/: anchors.py  pointpillars.py
src/lidar_object_detection/lidar_object_detection/utils/: __init__.py  process.py
src/object_detection_msgs/: CMakeLists.txt  package.xml
src/object_detection_msgs/msg/: BoundingBox3d.msg  Object3d.msg  Object3dArray.msg
src/object_visualization/: package.xml  setup.cfg  setup.py
src/object_visualization/object_visualization/: object3d_visualizer_node.py
