<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_object_detection</name>
  <version>0.0.0</version>
  <description>ROS2 Wrapper around PyTorch implementation of PointPillars</description>
  <maintainer email="ra3840924@gmail.com">Ragib Arnab</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>object_detection_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
